feat:added custom module to add blog_feature of word count

--- a/drupal/web/themes/custom/icecream/icecream.info.yml
+++ b/drupal/web/themes/custom/icecream/icecream.info.yml
@@ -21,6 +21,9 @@ regions:
 libraries:
   - icecream/views-custom
   - icecream/blog_interactions
+  - icecream/blog_greeting
+  - icecream/reading_progress
+
 
 
 
