--- a/drupal/web/themes/custom/icecream/icecream.libraries.yml
+++ b/drupal/web/themes/custom/icecream/icecream.libraries.yml
@@ -10,3 +10,8 @@ blog_interactions:
   dependencies:
     - core/drupal
 
+reading_progress:
+  js:
+    js/reading_progress.js: { attributes: { defer: true } }
+  dependencies:
+    - core/drupal
