feat:added banner, video, anf footer using SDC

--- a/drupal/web/themes/custom/icecream/icecream.info.yml
+++ b/drupal/web/themes/custom/icecream/icecream.info.yml
@@ -23,6 +23,8 @@ libraries:
   - icecream/blog_interactions
   - icecream/blog_greeting
   - icecream/reading_progress
+  - icecream/footer
+  - icecream/banner 
 
 
 
