--- a/drupal/web/themes/custom/icecream/icecream.libraries.yml
+++ b/drupal/web/themes/custom/icecream/icecream.libraries.yml
@@ -15,3 +15,9 @@ reading_progress:
     js/reading_progress.js: { attributes: { defer: true } }
   dependencies:
     - core/drupal
+
+footer:
+  version: 1.x
+  css:
+    theme:
+      components/footer/footer.css: {}
