feat:explored plugin api also implemented it in other module

--- a/drupal/web/modules/custom/omkar_formapi/omkar_formapi.info.yml
+++ b/drupal/web/modules/custom/omkar_formapi/omkar_formapi.info.yml
@@ -3,3 +3,5 @@ type: module
 description: 'Custom module to explore Form API with AJAX and submission preview.'
 core_version_requirement: ^11
 package: Custom
+dependencies:
+  - omkar_pluginapi
